welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: type mismatch;
 found   : Double
 required: Int
    for (k <- 1 to nbPas){
                   ^Program:8: error: type mismatch;
 found   : Double
 required: Int
    for(k <- 1 to nbPas){
                  ^