welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Double, versLAvant: Boolean): Double = {
  if (versLAvant == true){
    for (k <- 1 to nbPas){
    avance()
  }}
  else{
    for(k <- 1 to nbPas){
    recule()
    }
  }
  }